force-app/main/default/objects/Conference_Participant__c/Conference_Participant__c.object-meta.xml
<CustomObject>
    <label>Conference Participant</label>
    <nameField>
        <displayFormat>CP{00000000}</displayFormat>
        <label>Conference Participant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conference Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>