force-app/main/default/objects/Conference_Participant__c/fields/Conference__c.field-meta.xml
<CustomField>
    <fullName>Conference__c</fullName>
    <label>Conference</label>
    <referenceTo>Conference__c</referenceTo>
    <relationshipLabel>Conference Participants</relationshipLabel>
    <relationshipName>Conference_Participants1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>