force-app/main/default/objects/Conference_Participant__c/fields/Conference_Cost__c.field-meta.xml
<CustomField>
    <fullName>Conference_Cost__c</fullName>
    <label>Conference Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>