force-app/main/default/objects/Conference_Participant__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Conference Participants</relationshipLabel>
    <relationshipName>Conference_Participants1</relationshipName>
    <type>Lookup</type>
</CustomField>